# bazel-test

./: .gitignore  Makefile  README
.githooks/: pre-commit
.github/workflows/: ccpp.yml
PackageA/: CMakeLists.txt  README
PackageA/include/core/: moduleA.h
PackageA/src/: moduleA.cpp
PackageB/: BUILD  BUILD.libPackageA  Makefile  README  WORKSPACE  main.cpp
PackageB/bazelLibs/: BUILD.libPackageA
PackageB/tests/: BUILD  test-TestModuleA.cpp
Physics/: CMakeLists.txt  deploy.sh
PhysicsProject/: .gitignore  CMakeLists.txt  README  deploy.sh
PhysicsProject/include/physics/: constants.h  hydrogen.h
PhysicsProject/src/: hydrogen.cpp
PhysicsProject/utils/: tools.sh
bazelProject/: .gitignore  BUILD  Makefile  README  WORKSPACE  bazel-bazelProject
bazelProject/bazelLibs/: BUILD.cmakeProjectLib
bazelProject/src/: groundstate.cpp
bazelProject/tests/: BUILD  physicsLibTest.cpp
cmakeProject/: CMakeLists.txt  README
